--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "basic-auth": "^2.0.1",
-    "express": "^4.17.1",
-    "lodash": "^4.17.21",
-    "request": "^2.83.0",
+    "basic-auth": ">=2.0.1",
+    "express": ">=4.17.1",
+    "lodash": ">=4.17.21",
+    "request": ">=2.83.0",
     "sharp": "0.28.2"
   },
   "engines": {
